# ocx-schema-parser

./: .buildinfo  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  environment.yaml  environment.yml  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  schema.html  search.html  searchindex.js  setup.cfg  setup.py  table.py  tox.ini  utils.html
.doctrees/: environment.pickle  index.doctree  schema.doctree  utils.doctree
.github/workflows/: documentation.yaml  python-publish.yml
_modules/: index.html
_modules/ocx_schema_parser/: data_classes.html  elements.html  helpers.html  ocxparser.html  transformer.html  xelement.html  xparse.html
_modules/ocx_schema_parser/ocxdownloader/: downloader.html
_modules/ocx_schema_parser/utils/: utilities.html
_sources/: index.rst.txt  schema.rst.txt  utils.rst.txt
docs/: conf.py  index.rst  installation.rst  requirements.txt  schema.rst  usage.rst  utils.rst
docs/reference/: index.rst  schema.rst  schema_parser.rst  utils.rst
docs/source/: conf.py
docs/source/reference/: index.rst
ocx_schema_parser/: __init__.py  check.py  config.py  data_classes.py  documentor.py  elements.py  errors.py  helpers.py  ocxparser.py  parser.py  transformer.py  xelement.py  xparse.py
ocx_schema_parser/configs/: schema_config.yaml
ocx_schema_parser/ocxdownloader/: __init__.py  downloader.py
ocx_schema_parser/ocxtransformer/: transformer.py
ocx_schema_parser/utils/: utilities.py
schema_versions/: OCX_Schema.xsd  unitsmlSchema_lite-0.9.18.xsd
src/schema_parser/: __init__.py  __main__.py  cli.py  data_classes.py  elements.py  parser.py  xelement.py  xparse.py
src/schema_parser/configs/: schema_config.yaml
src/utils/: __init__.py  utilities.py
tests/: conftest.py  test_check.py  test_config.py  test_downloader.py  test_elements.py  test_helpers.py  test_ocxparser.py  test_parser.py  test_schema_helpers.py  test_schema_parser.py  test_transformer.py  test_utilities.py  test_xelement.py  test_xparse.py
tests/data/: OCX_Schema.xsd  unitsmlSchema_lite-0.9.18.xsd  xml.xsd
tests/test_config/: test_name_exceptions.yml  test_w3c_schema_builtin_types.yml
tests/test_elements/: test_attributes_to_dict.yml  test_children_to_dict.yml
tests/test_helpers/: test_find_schema_changes.yml
tests/test_ocxparser/: test_attribute_types.yml  test_complex_types.yml  test_element_types.yml  test_get_substituition_groups.yml  test_get_xs_types.yml  test_summary_table.yml  test_tbl_attribute_groups.yml  test_tbl_simple_types.yml
tests/test_parser/: test_attribute_types.yml  test_summary_table.yml  test_tbl_attribute_groups.yml  test_tbl_simple_types.yml
tests/test_schema_reader/: test_attribute_types.yml  test_summary_table.yml  test_tbl_attribute_groups.yml
tests/test_transformer/: test_get_enumerators.yml  test_get_enumerators_from_url.yml  test_get_global_attributes.yml  test_get_global_attributes_from_url.yml  test_get_ocx_element_properties_from_type_from_url.yml  test_get_simple_types.yml  test_get_simple_types_from_url.yml
tests/test_utilities/: test_load_yaml_config.yml
tests/test_xml_parser/: test_get_target_namespace.yml
tests/test_xparse/: test_get_namespaces.yml  test_get_referenced_files.yml  test_get_target_namespace.yml
