[project]
name = "ocx-schema-parser"
version = "1.8.5"
description = "A python package for parsing the OCX schema definition and generating schema documentation."
readme = "README.md"
authors = [
    { name = "ocastrup", email = "ole.christian.astrup@dnv.com" }
]
homepage = "https://github.com/OCXStandard/ocx-schema-parser"
requires-python = ">=3.10"
dependencies = [
    "ocx-common>=2.6.0",
    "pyspellchecker>=0.8.4",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=ocx_schema_parser --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["ocx_schema_parser"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-datadir>=1.8.0",
    "pytest-regressions>=2.10.0",
    "pytest-subtests>=0.15.0",
]
