[project]
name = "ocx-schema-parser"
version = "2.0.0"
description = "A python package for parsing the OCX schema definition and generating schema documentation."
readme = "README.md"
authors = [
    { name = "ocastrup", email = "ole.christian.astrup@dnv.com" }
]
homepage = "https://github.com/OCXStandard/ocx-schema-parser"
requires-python = ">=3.10"
dependencies = [
    "ocx-common>=2.6.0",
    "pyspellchecker>=0.8.4",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=ocx_schema_parser --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["ocx_schema_parser"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.tbump]
github_url = "https://github.com/OCXStandard/ocx-schema-parser/"

[tool.tbump.version]
current = "2.0.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to v{new_version}"
tag_template = "v{new_version}"

# pyproject.toml version field
[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

# package __version__ string
[[tool.tbump.file]]
src = "ocx_schema_parser/__init__.py"
search = '__version__ = "{current_version}"'

# Check CHANGELOG has an entry for the new version before committing
[[tool.tbump.before_commit]]
name = "check changelog"
cmd = "grep -q {new_version} CHANGELOG.md"
